<resources>
    <string name="app_name" translatable="false">PXL</string>
    <string name="pencil">Pencil</string>
    <string name="fill">Flood Fill</string>
    <string name="colorpick">Color Picker</string>
    <string name="color_swap">Color Swap</string>
    <string name="eraser">Eraser</string>
    <string name="selector">Selector</string>
    <string name="multishape">Multishape</string>
    <string name="pencil_action">Draw</string>
    <string name="fill_action">Fill!</string>
    <string name="colorpick_action">Pick!</string>
    <string name="symmetry">Symmetry</string>
    <string name="tutorial_prompt">Want to see the tutorial?</string>
    <string name="yes">Yes</string>
    <string name="no">Nope</string>
    <string name="tutorial_hint">You can always revisit the tutorial from the navigation drawer!</string>
    <string name="tutorial_for_tool">Tutorial: %s</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="cursor_action">DRAW</string>
    <string name="error">Internal error</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="comp_mode">On Android 4.4, PXL uses compatible dark theme</string>
    <string name="feedback_mail_subject">PXL Feedback</string>
    <string name="about_info" formatted="false">PXL version %s\nMax process memory: %d MB</string>
    <string name="hex" translatable="false">HEX</string>
    <string name="import_in_pxl">Import in PXL</string>
    <string name="misc">Other</string>
    <string name="feedback">Feedback</string>
    <string name="tutorial">Tutorial</string>
    <string name="about">About</string>
    <string name="change_palette">Change Palette</string>
    <string name="select_palette">Select Palette</string>
    <string name="edit_color">Edit Color</string>
    <string name="palettes">Palettes</string>
    <string name="incorrect_palette_name">Palette name is already in use or incorrect!\n(You may use only letters, digits and spaces)</string>
    <string name="create_new_palette">Create New Palette</string>
    <string name="enter_name">Enter name</string>
    <string name="pick_color">Custom Color</string>
    <string name="add_to_palette">Add to Palette</string>
    <string name="add_to_palette_hint">Click on the color in palette you want to replace with current color!</string>
    <string name="color_edit_hint">Click on a color to edit it!</string>
    <string name="extracted">Extracted</string>
    <string name="extracting">Extracting colors…</string>
    <string name="default_palette">Default</string>
    <string name="project">Project</string>
    <string name="projects">Projects</string>
    <string name="create_new_project">Create New Project</string>
    <string name="name">Name</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="transparentBackground">Transparent Background</string>
    <string name="incorrect_width_or_height">Width and height must be bigger than 0</string>
    <string name="imported_bitmap_too_big" formatted="false">Maximum size of imported image is %dx%d!</string>
    <string name="name_imported">Imported</string>
    <string name="original">(Original)</string>
    <string name="select_resolution">Select resolution of exported image</string>
    <string name="custom">Custom…</string>
    <string name="enter_custom_resolution">Enter desired pixel size of greater side of the image, size of the lesser side will be calculated using aspect ratio of the project</string>
    <string name="share">Share</string>
    <string name="exporting">Exporting image</string>
    <string name="storage_permissions_denied">Unable to access gallery. Please give PXL permission to access files on the device.</string>
    <string name="create">Create</string>
    <string name="project_saved">Project has been exported</string>
    <string name="res_notice">Original resolution will look blurry in most apps, but is suitable for further editing as a pixel art.\n\nOn the other hand, resolution suggested for posting/sharing the art will look good in other apps, but it will be unsuitable for further editing as a pixel art</string>
    <string name="resize_promt">Maximum project resolution is %dx%d.\n\nDo you want PXL to resize imported image to %dx%d?</string>
    <string name="cancel_import">Cancel Importing</string>
    <string name="posterizing">Posterizing Image…</string>
    <string name="posterizer_prompt">Posterizing</string>
    <string name="posterizer_desc"><b>Do you want to posterize this image?</b>\n\n(Posterization means reducing the color palette of the image to 16 colors, so it looks more \"pixelartish\". Usually looks good on art, but somewhat odd on photos, you can experiment though)</string>
    <string name="suggested_multiplier">(Suggested for posting/sharing the art)</string>
    <string name="invalid_resolution">Invalid Resolution</string>
    <string name="invalid_resolution_desc">Both width and height must be greater than 0</string>
    <string name="invalid_name">Please enter project name</string>
    <string name="import_error">Error while importing selected image</string>
    <string name="size">Size</string>
    <string name="last_modified">Last Modified</string>
    <string name="live_preview">Live Preview</string>
    <string name="moving_image_tip"><b>Tip:</b> You can drag the image or use the buttons to move it pixel-by-pixel</string>
    <string name="new_name">New name</string>
    <string name="rename_project">Rename Project</string>
    <string name="delete_project">Delete this project?</string>
    <string name="duplicate_prefix">Copy of</string>
    <string name="rename_palette">Rename Palette</string>
    <string name="delete_palette">Delete Palette?</string>
    <string name="canvas_options">Canvas Options</string>
    <string name="history_size">History size is %d elements</string>
    <string name="symmetry_none">Symmetry Disabled</string>
    <string name="symmetry_h">Horizontal Symmetry</string>
    <string name="symmetry_v">Vertical Symmetry</string>
    <string name="exit_prompt">Close this project?</string>
    <string name="flip_direction_selection">Flip direction</string>
    <string name="sym_axises_shown">Symmetry axis is now shown</string>
    <string name="sym_axises_hidden">Symmetry axis is now hidden</string>
    <string name="history_gone">History lost</string>
    <string name="history_gone_desc">Further history has been lost, this might\'ve happened due to your device running low on storage space or due to \"phone cleaner/booster\" apps</string>
    <string name="precise_picker">Use Precise Color Picker</string>
    <string name="lock_angles">Locked Angles</string>
    <string name="lock_square">Lock to Square</string>
    <string name="lock_circle">Lock to Circle</string>
    <string name="tool_style">Cap Style</string>
    <string name="stroke_width">Stroke Width: %dpx</string>
    <string name="fill_shape">Fill</string>
    <string name="style_round">Round</string>
    <string name="style_square">Square</string>
    <string name="corners_rounding">Corners Rounding: %d</string>
    <string name="pixel_surface">Canvas</string>
    <string name="cursor">Cursor</string>
    <string name="select_background_color">Background Color</string>
    <string name="select_grid_color">Grid Color</string>
    <string name="cursor_sensitivity">Cursor Sensitivity</string>
    <string name="cursor_opacity">Cursor Opacity</string>
    <string name="select_cursor_image">Select Cursor Image</string>
    <string name="trans_canvas_bg">Transparent Canvas Background</string>
    <string name="tc_bg_desc">The background color of a transparent canvas, so you can see the actual drawing area.\nVanishes when you export the project</string>
    <string name="category_other">Other</string>
    <string name="restore_default_palettes">Restore default palettes</string>
    <string name="palettes_restored">Default palettes were restored</string>
    <string name="performance">Performance</string>
    <string name="hardware_acceleration">Hardware Acceleration</string>
    <string name="hw_desc">Improves performance of some tools drastically</string>
    <string name="warn">Warning</string>
    <string name="hw_warn">Only disable hardware acceleration, if \"Accelerated Tools\", listed below, make app crash or don\'t work\n\n<b>Accelerated Tools:</b>\nColor Swapper\n\n<b>Tools that aren\'t available without hardware acceleration:</b>\nPosterization on Import</string>
    <string name="allow_hi_res">Allow high resolution</string>
    <string name="hi_res_desc">Enable support of up to 512x512 projects and images.\nNot recommended on devices with less than 2GBs of RAM until you have \"Extended history\" enabled</string>
    <string name="palettes_override_warn">This will override all of the modified colors in default palettes and restore deleted ones</string>
    <string name="auto_back_after_color_pick">Switch back after picking color</string>
    <string name="abacp_desc">Automatically switches to the previous tool after picking color with Color Picker tool</string>
    <string name="behavior">Behavior</string>
    <string name="insta_swap">Instant Swap</string>
    <string name="insta_swap_desc">Color Swapper tool instantly swaps the picked color to the current paint color instead of opening a color chooser with an ability to live-preview changes</string>
    <string name="flawless_symmetry">Flawless Symmetry</string>
    <string name="flawless_sym_desc">Uses pixel perfect but a slightly more resources-demanding symmetry</string>
    <string name="sym_axises_color">Symmetry axises color</string>
    <string name="infinite_history">Extended history</string>
    <string name="infinite_history_desc">Always keeps up to 1024 steps in history, instead of normal 64-300 steps depending on the project resolution</string>
    <string name="close">Close</string>
    <string name="tt_pencil">Just a pencil. Use tool settings panel to change the stroke width and line caps style</string>
    <string name="tt_eraser">Works just like the pencil, but erases the color, hence changing it to white or transparent, if you enabled transparent background in project creation window</string>
    <string name="tt_multishape">One tool, many shapes. Use tool settings panel to select the shape, stroke width and to configure shape-specific parameters like to lock ellipsis to circle or round rect\'s borders</string>
    <string name="tt_fill">A normal flood fill. Use it to fill limited areas of the same color. If you need to change all pixels of the same color on the image, use the color swapper, it works much faster</string>
    <string name="tt_color_pick">Sets the current color to the color you selected with it</string>
    <string name="tt_color_swap">Swaps all the pixels of the selected color on the image to another color. It will open a live preview window on use, where you can alter the selected color in real time.\n\n<b>Warning:</b>\nThis will work super-slow on large pictures if you have disabled the hardware acceleration in settings</string>
    <string name="tt_selector">Drag from one point to another to create a selection rect.\n\nTo move selected pixels, tap inside the selection rect and drag it.\n\nYou can use the \"Clone\" button on the left to create a clone of selection under it and the \"Clear\" button to delete the selected pixels.\n\nTo remove the selection, tap outside the selection rect.</string>
    <string name="t2_reset_tutorial">Reset tutorial progress</string>
    <string name="t2_reset_tutorial_desc">In case you want to read it again</string>
    <string name="t2_reset_tutotial_done">Tutorial progress was reset</string>
</resources>