<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/multishapeSettings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true">

    <ImageButton
        android:id="@+id/rectTool"
        style="@style/PXLImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        app:srcCompat="@drawable/square" />

    <ImageButton
        android:id="@+id/circleTool"
        style="@style/PXLImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_toEndOf="@+id/rectTool"
        android:visibility="visible"
        app:srcCompat="@drawable/circle" />

    <ImageButton
        android:id="@+id/lineTool"
        style="@style/PXLImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/rectTool"
        android:background="@drawable/full_round_rect_bg_dark"
        android:visibility="visible"
        app:srcCompat="@drawable/line" />

    <Switch
        android:id="@+id/shapeFillSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lockedSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/fill_shape"
        android:visibility="gone" />

    <Switch
        android:id="@+id/lockedSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cornersRoundingSeekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/lock_angles"
        android:visibility="visible" />

    <TextView
        android:id="@+id/shapeToolSizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rectTool"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="8dp"
        android:text="@string/stroke_width"
        android:visibility="visible" />

    <SeekBar
        android:id="@+id/shapeToolSizeSeekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shapeToolSizeText"
        android:layout_centerHorizontal="true"
        android:max="15"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/roundingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shapeToolSizeSeekbar"
        android:layout_marginTop="8dp"
        android:text="Corners Rounding:"
        android:visibility="gone" />

    <SeekBar
        android:id="@+id/cornersRoundingSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/roundingText"
        android:max="16"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/toolStyleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shapeFillSwitch"
        android:layout_marginTop="8dp"
        android:text="@string/tool_style" />

    <RadioGroup
        android:id="@+id/toolStyleRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolStyleText"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <RadioButton
            android:id="@+id/toolStyleRadioButtonRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/style_round" />

        <RadioButton
            android:id="@+id/toolStyleRadioButtonSquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/style_square" />
    </RadioGroup>

</RelativeLayout>