<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pencilSettings"
    android:layout_width="@dimen/tool_setting_layout_width"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:padding="8dp">

    <TextView
        android:id="@+id/toolSizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tool size: 1px" />

    <SeekBar
        android:id="@+id/toolSizeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolSizeText"
        android:max="15"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" />

    <TextView
        android:id="@+id/toolStyleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolSizeSeekBar"
        android:text="@string/tool_style" />

    <RadioGroup
        android:id="@+id/toolStyleRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolStyleText"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <RadioButton
            android:id="@+id/toolStyleRadioButtonRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/style_round" />

        <RadioButton
            android:id="@+id/toolStyleRadioButtonSquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/style_square" />
    </RadioGroup>
</RelativeLayout>