<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.af.pxl.AdaptivePixelSurfaceH
        android:id="@+id/aps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/topButtons"
        android:layout_width="162dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/halfround_rect_background"
        android:elevation="@dimen/default_elevation"
        android:orientation="horizontal"
        android:padding="3dp"
        android:paddingTop="0dp"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/grid"
            style="@style/PXLImageButton"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="0dp"
            android:background="@drawable/sketchbook_style_button_selector"
            android:elevation="0dp"
            app:srcCompat="@drawable/gridoff" />

        <ImageButton
            android:id="@+id/symmetry"
            style="@style/PXLImageButton"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_margin="0dp"
            android:layout_toEndOf="@+id/grid"
            android:background="@drawable/sketchbook_style_button_selector"
            android:elevation="0dp"
            app:srcCompat="@drawable/symmetryoff" />

        <ImageButton
            android:id="@+id/cursorMode"
            style="@style/PXLImageButton"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_margin="0dp"
            android:layout_toEndOf="@+id/symmetry"
            android:background="@drawable/sketchbook_style_button_selector"
            android:elevation="0dp"
            app:srcCompat="@drawable/normal2" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/undo"
        style="@style/PXLImageButton"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/undo" />

    <ImageButton
        android:id="@+id/redo"
        style="@style/PXLImageButton"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/redo" />

    <ImageButton
        android:id="@+id/clear"
        style="@style/PXLImageButton"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/clear" />

    <com.af.pxl.ColorCircle
        android:id="@+id/currentColor"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:elevation="18dp" />

    <Button
        android:id="@+id/cursorAction"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/clear"
        android:layout_centerHorizontal="true"
        android:background="@drawable/selector2"
        android:text="@string/cursor_action"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:visibility="gone" />

    <com.af.pxl.ToolPickView
        android:id="@+id/currentTool"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:elevation="@dimen/default_elevation" />

    <com.af.pxl.SymmetryModePickView
        android:id="@+id/emve"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_alignStart="@+id/topButtons"
        android:layout_below="@+id/topButtons"
        android:layout_marginStart="47dp"
        app:bitmapSize="52dp"
        app:gapSize="4dp" />

    <ImageButton
        android:id="@+id/TMP"
        style="@style/PXLImageButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="Move"
        app:srcCompat="@drawable/tempsplash" />

    <FrameLayout
        android:id="@+id/toolSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topButtons"
        android:layout_marginEnd="@dimen/tool_setting_layout_margin_end"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/currentTool"
        android:background="@drawable/full_round_rect_bg"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:elevation="12dp"
        android:padding="8dp"
        android:visibility="gone">

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/paletteBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topButtons"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/full_round_rect_bg"
        android:elevation="12dp"
        android:padding="4dp"
        android:visibility="gone">

        <Button
            android:id="@+id/changePalette"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/select_palette" />

        <TextView
            android:id="@+id/paletteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/changePalette"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:paddingStart="8dp"
            android:text="Default"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/paletteRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/paletteName"
            android:paddingTop="4dp">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/editColor"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/paletteRecycler"
            android:text="@string/pick_color" />

        <Button
            android:id="@+id/addColor"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/paletteRecycler"
            android:text="@string/add_to_palette" />

        <com.af.pxl.ColorCircle
            android:id="@+id/colorCircle"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentBottom="false"
            android:layout_alignTop="@+id/editColor"
            android:layout_centerHorizontal="true"
            android:elevation="@dimen/default_elevation" />

    </RelativeLayout>

</RelativeLayout>